# request.js
@@ -1,0 +1,38 @@
+const createProduct = {
+    "product_title": "Cloreto de Sódio - Swagger specification Tsv",
+    "comercial_name": "Cloreto de Sódio",
+    "chemical_name": "Nome químico",
+    "function": "Função",
+    "application": "Aplicação",
+    "product_enums":[
+        {
+            "name": "Segmentos",
+            "value": [
+                "agricultura",
+                "tintas_e_resinas",
+                "tratamento_de_agua",
+                "cuidados_em_casa"
+            ]
+          },
+    ],
+    "topics": [
+      {
+        "name": "Pureza",
+        "value": "A pureza do produto pode variar entre 90% e 95%"
+      },
+      {
+        "name": "Densidade",
+        "value": "A densidade é de 1.32 g/cm³ a 20°C"
+      },
+      {
+        "name": "Solubilidade",
+        "value": "Solúvel em água a uma concentração de aproximadamente 360g/L a 20°C."
+      },
+      {
+        "name": "Composicao Química",
+        "value": "Cl- (íon cloreto): 60.66%, Na+ (íon sódio): 39.34%"
+      }
+    ],
+    "data": "Header1\tHeader2\tHeader3\tHeader4\r\nrow1\trow1\trow1\trow1\trow1\trow1\r\nrow2\trow2\trow2\trow2\trow2\trow2",
+    "image":""
+  }
